--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,17 +6,19 @@ trigger:
 pool:
   name: 'Default'  # El nombre del Agent Pool donde registraste tu agente self-hosted
 
+variables:
+  GITHUB_TOKEN: $(GITHUB_TOKEN)  # Definir el token globalmente
+
 steps:
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '3.x'
-    addGitHubToken: true  # Indica que quieres usar un token de GitHub
-
   env:
-    GITHUB_TOKEN: $(GITHUB_TOKEN)  # Usa la variable de entorno para autenticar la descarga
+    GITHUB_TOKEN: $(GITHUB_TOKEN)
 
 - script: |
     ssh -o StrictHostKeyChecking=no azureuser@13.83.4.217 'ansible-playbook -i /Documentos/Ansible/inventory.ini /Documentos/Ansible/deploy.yml'
   displayName: 'Ejecutar Ansible Playbook en VM'
+
 
 
