--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,11 +11,10 @@ variables:
 
 steps:
 - script: |
-    ssh -o StrictHostKeyChecking=no azureuser@13.83.4.217 'ansible-playbook -i /Documentos/Ansible/inventory.ini /Documentos/Ansible/deploy.yml'
-  displayName: 'Ejecutar Ansible Playbook en VM'
+    ansible-playbook -i /Documentos/Ansible/inventory.ini /Documentos/Ansible/deploy.yml
+  displayName: 'Ejecutar Ansible Playbook localmente'
   env:
     ACTIONS_RUNTIME_TOKEN: $(MY_GITHUB_TOKEN)  # Usar el token de GitHub para evitar el límite de descargas
-
 
 
 
