--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,7 @@ steps:
     ACTIONS_RUNTIME_TOKEN: $(MY_GITHUB_TOKEN)  # Usar el token de GitHub para evitar el límite de descargas
 
 - script: |
+    set -x
     python3 /var/www/html/tests/test_selenium.py
   displayName: 'Ejecutar pruebas con Selenium'
+
