--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,8 @@ steps:
     ACTIONS_RUNTIME_TOKEN: $(MY_GITHUB_TOKEN)  # Usar el token de GitHub para evitar el límite de descargas
 
 - script: |
-    set -x
-    python3 /var/www/html/tests/test_selenium.py
-  displayName: 'Ejecutar pruebas con Selenium'
+    ssh azureuser@13.83.4.217"ls -l /var/www/html/tests/"
+    ssh azureuser@13.83.4.217 "python3 /var/www/html/tests/test_selenium.py"
+  displayName: 'Listar archivos y ejecutar pruebas con Selenium'
+
 
