Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,8 @@ steps:
 
 - script: |
     ssh azureuser@13.83.4.217 "ls -l /var/www/html/tests/"
-    ssh azureuser@13.83.4.217 "python3 /var/www/html/tests/test_selenium.py"
-  displayName: 'Listar archivos y ejecutar pruebas automaticas con Selenium apara revisar vista de usuario'
+    ssh azureuser@13.83.4.217 "python3 /var/www/html/tests/test_basicos.py"
+  displayName: 'Listar archivos y ejecutar tests basicos con Selenium'
 
 
 
